# agents-for-ollama

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agents_ollama/: __init__.py  cas_return.py  cas_runner.py  checkpoint.py  cli.py  client.py  goal_verify.py  max_mode_lite.py  mvp_slice.py  sigmem0_recall.py
docs/: README.md  agentic-patterns.md  agentic-proposal-v0.2.md  building-agentic-software.md  cas-return-bridge.md  cloud-lane-comparison.md  configuration.md  detached-membrane-boundary-spec.md  detached-membrane-ops-pack.md  detached-membrane-policy-adoption.md  examples-walkthrough.md  getting-started.md  models-macos-m4.md  pattern-verification-log.md  portfolio-state-bluehand-alignment.md  programmatic-intelligence-seams.md  public-safe-schema-slice.md  troubleshooting.md  verification-log.md
examples/: 01_basic_chat.py  02_tool_calling.py  03_global_client.py  04_handoffs.py  05_agent_as_tool.py  06_session_chat.py  07_structured_output.py  08_guardrails.py  09_parallel.py  10_cas_return_stub.py  11_llm_guardrails.py  12_session_checkpoint.py  13_sigmem0_recall_agent.py  14_goal_verify.py  15_max_mode_lite.py  README.md
scripts/: atlas_portfolio_digest.sh  check_membrane_leaks.sh  compile_membrane_policy.sh  export_detached_membrane.sh  membrane_governance_e2e.sh  membrane_local_gate.sh  membrane_ops.sh  membrane_preflight.sh  membrane_propose.sh  membrane_quality_gate.sh  membrane_ts_validate.sh  membrane_verify.sh  mvp_slice.sh  python_agents_apply_smoke.sh  refresh_membrane_manifest_checksum.sh  test_patterns.sh  verify_portfolio.sh  (+5 more)
(+17 files in other folders)
