[project]
name = "agents-ollama-macos"
version = "0.1.0"
description = "Agents for Ollama — OpenAI Agents SDK with Ollama on macOS (Apple Silicon)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Damian" }]
keywords = ["openai-agents", "ollama", "macos", "apple-silicon", "local-llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai-agents>=0.17.0",
    "openai>=1.0.0",
]

[project.scripts]
agents-ollama-chat = "agents_ollama.cli:chat_main"
agents-ollama-verify = "agents_ollama.cli:verify_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents_ollama"]

[tool.uv]
package = true
